--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,21 @@
-h1, p {
-  font-family: Lato;
+
+body {
+	font-size: 	16px;
+	font-family: Lato;
 }
 
+h1 {
+	text-align: center;
+}
+
+.message-tiles h1 {
+	text-align: left;
+}
 ul {
   list-style-type: none;
 }
 
-li {
+.message-tiles li {
   background-color: blue;
   border-radius: 10px;
   margin: 1em;
