--- a/src/style.css
+++ b/src/style.css
@@ -2,22 +2,113 @@
 body {
 	font-size: 	16px;
 	font-family: Lato;
+	height: 100%;
+}
+
+* {
+	box-sizing: border-box;
 }
 
 h1 {
 	text-align: center;
 }
 
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.MessageList {
+	max-width: 80%;
+	margin: auto;
+}
+
+.message-tiles {
+	max-width: 	100%;
+	margin: auto;
+	padding-bottom: 3em;
+}
+
 .message-tiles h1 {
 	text-align: left;
 }
-ul {
-  list-style-type: none;
-}
 
 .message-tiles li {
-  background-color: blue;
+  background-color: purple;
+  color: white;
   border-radius: 10px;
-  margin: 1em;
+  margin: 1em 0;
   padding: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+button {
+	border-radius: 999px;
+	border: none;
+	padding: 1em;
+	outline: transparent;
+}
+
+button:hover {
+	background-color: purple;
+	cursor: pointer;
+	color: white;
+}
+
+.MessageTile button {
+	background-color: white;
+	align-self: flex-end;
+}
+
+.MessageTile button:hover {
+	background-color: lightgrey;
+	color: black;
+}
+
+.list-btns {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	margin: auto;
+}
+
+.page-nums {
+	display: flex;
+	align-items: center;
+}
+
+.page-btn{
+	margin: .1em;
+}
+
+.currently {
+	border: 2px solid purple;
+}
+
+.spinner-container {
+  display: flex;
+  width: 100%;
+  height: 85vh;
+  align-items: center;
+  justify-content: center;
+}
+
+.spinner-container .spinner {
+  display: inline-block;
+  width: 5em;
+  height: 5em;
+  border: 2px solid rgba(10,10,10,.3);
+  border-radius: 50%;
+  border-top-color: #000;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
 }
